# nbstripout-fast

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml  wheels.yml
examples/: .git-nbconfig.yaml  comparison.py  example.ipynb  example.stripped.ipynb
src/: lib.rs  main.rs  stripoutlib.rs
tests/: conftest.py  test_nbstripout_fast.py  test_notebook.ipynb
