[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "nbstripout-fast"
description="Strips outputs from Jupyter notebooks"
readme = "README.md"
author="Marc Udoff"
author_email="marc.udoff@deshaw.com"
url="https://github.com/deshaw/nbstripout-fast"
requires_python=">=3.9"
setup_requires=[
    "pytest-runner",
]
tests_require=[
    "nbformat",
    "pytest",
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
[project.urls]
homepage = "https://github.com/deshaw/nbstripout-fast"

[project.optional-dependencies]
test = [
    "pytest",
    "nbformat",
    "nbconvert",
    "ipykernel",
]

[tool.maturin]
bindings = "bin"
no-default-features = true
